# mimiclaw

./: .gitignore  README.md  partitions-c3.csv  partitions.csv  sdkconfig.defaults.esp32c3  sdkconfig.defaults.esp32s3
.github/workflows/: build-c3-supermini.yml  build.yml  release.yml
components/micropython_embed/: CMakeLists.txt
components/micropython_embed/port/: mpconfigport.h
docs/: ESP32_C3_SUPERMINI.md  ESP32_S3_HARDWARE_VOICE.md  ESP32_S3_SUPERMINI.md  VOICE_SERVER_HANDOFF.md  WIFI_ONBOARDING_AP.md
main/: CMakeLists.txt  idf_component.yml  mimi.c  mimi_config.h  mimi_secrets.h.example
main/agent/: agent_loop.c  context_builder.c
main/board/: boot_button.c  boot_button.h  status_led.c  status_led.h
main/channels/telegram/: telegram_bot.c
main/cli/: serial_cli.c
main/llm/: llm_proxy.c  llm_proxy.h
main/micropython/: micropython_vm.c
main/onboard/: onboard_html.h  wifi_onboard.c  wifi_onboard.h
main/tools/: gpio_policy.c  gpio_policy.h  tool_files.c  tool_files.h  tool_memory.c  tool_memory.h  tool_registry.c  tool_system.c  tool_system.h  tool_voice.c  tool_voice.h  tool_web_search.c
main/voice/: voice_hw.c  voice_hw.h  voice_stream.c  voice_stream.h
main/wifi/: wifi_manager.c  wifi_manager.h
